[package]
name = "rusty_boi"
version = "0.1.0"
authors = ["rainbowcookie32"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
byteorder = "1.3.4"
simple_logger = "1.6.0"

imgui = "0.4.0"
glium = { version = "0.27.0", default-features = true }
imgui-glium-renderer = "0.4.0"
imgui-winit-support = "0.4.0"