[package]
name = "rusty_boi"
version = "0.1.0"
authors = ["rainbowcookie32"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.8"
byteorder = "1.3.2"
simple_logger = "1.3.0"
sdl2 = { version = "0.34.2", features = ["unsafe_textures"] }